log
Wed 08 May 2024 02:19:33 AM UTC: 
 tests:  1|8
total_score: 0/70
44e9bf0
Wed 08 May 2024 02:33:06 AM UTC: 
 tests:  1|8
total_score: 0/70
fb08896
Wed 08 May 2024 02:57:53 AM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
c134e6d
Wed 08 May 2024 03:01:00 AM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 5/70
6c9d3c3
Wed 08 May 2024 03:08:09 AM UTC: 
 treemap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
27d2dcd
Wed 08 May 2024 03:21:42 AM UTC: 
 treemap.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:66:19: error: unused variable ‘nodoAux’ [-Werror=unused-variable]
   66 |         TreeNode *nodoAux = arbolito->root;
      |                   ^~~~~~~
treemap.c:70:5: error: statement with no effect [-Werror=unused-value]
   70 |     3. Si la clave del nodo actual es igual a la clave a insertar, entonces se actualiza el dato del nodo.
      |     ^~
treemap.c:70:7: error: expected ‘;’ before ‘Si’
   70 |     3. Si la clave del nodo actual es igual a la clave a insertar, entonces se actualiza el dato del nodo.
      |       ^~~
      |       ;
cc1: all warnings being treated as errors
Compilation failed
6bfe34f
Wed 08 May 2024 03:30:57 AM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:74:43: error: ‘TreeNode’ has no member named ‘key’
   74 |             if (is_equal(arbolito, nodoAux->key, key))
      |                                           ^~
treemap.c:75:9: error: expected expression before ‘}’ token
   75 |         }
      |         ^
treemap.c:79:5: error: statement with no effect [-Werror=unused-value]
   79 |     3. Si la clave del nodo actual es igual a la clave a insertar, entonces se actualiza el dato del nodo.
      |     ^~
treemap.c:79:7: error: expected ‘;’ before ‘Si’
   79 |     3. Si la clave del nodo actual es igual a la clave a insertar, entonces se actualiza el dato del nodo.
      |       ^~~
      |       ;
cc1: all warnings being treated as errors
Compilation failed
ae61611
Thu 09 May 2024 07:34:30 PM UTC: 
 treemap.c | 30 +++++++++++++++---------------
 1 file changed, 15 insertions(+), 15 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:84:29: error: ‘nodoPosicion’ undeclared (first use in this function)
   84 |         nuevoNodo->parent = nodoPosicion;
      |                             ^~~~~~~~~~~~
treemap.c:84:29: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
98d3799
Thu 09 May 2024 07:35:09 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:11: error: unused variable ‘pair’ [-Werror=unused-variable]
   58 |     Pair *pair = NULL;
      |           ^~~~
cc1: all warnings being treated as errors
Compilation failed
e9866d1
Thu 09 May 2024 07:50:25 PM UTC: 
 treemap.c | 23 ++++++++++++++---------
 1 file changed, 14 insertions(+), 9 deletions(-)
 tests:  6|6
total_score: 5/70
5460629
Thu 09 May 2024 07:53:23 PM UTC: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  5|6
total_score: 5/70
9f50e4a
Thu 09 May 2024 07:55:38 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|6
total_score: 5/70
6e92f49
Thu 09 May 2024 07:57:36 PM UTC: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|0
435cb2e
Thu 09 May 2024 07:58:04 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|6
total_score: 5/70
8a93da4
Thu 09 May 2024 08:04:28 PM UTC: 
 treemap.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
 tests:  8|5
total_score: 15/70
b5c82ee
Thu 09 May 2024 08:11:42 PM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  9|5
total_score: 15/70
8fd5929
Thu 09 May 2024 08:12:35 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|5
total_score: 15/70
29eee8f
Thu 09 May 2024 08:13:54 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
6cb2e27
Thu 09 May 2024 08:16:19 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  17|3
total_score: 30/70
cea3fcd
Thu 09 May 2024 08:23:36 PM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  17|3
total_score: 30/70
2ff207b
Thu 09 May 2024 08:25:22 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 35/70
d0c9915
Thu 09 May 2024 08:31:17 PM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  18|3
total_score: 35/70
faf79e4
Thu 09 May 2024 08:32:16 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
b75d47f
Thu 09 May 2024 08:34:48 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
26a2a05
Thu 09 May 2024 08:39:21 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
37b7dd2
Thu 09 May 2024 08:39:49 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  18|3
total_score: 35/70
677d3f3
Thu 09 May 2024 08:41:47 PM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
f55dae8
Thu 09 May 2024 08:42:46 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
e810875
Thu 09 May 2024 08:44:12 PM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
b19c8e5
Thu 09 May 2024 08:44:54 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  20|2
total_score: 45/70
25a1f13
Sun 12 May 2024 12:35:40 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  20|2
total_score: 45/70
6a3646e
Sun 12 May 2024 12:58:21 AM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  22|2
total_score: 50/70
2192dde
Sun 12 May 2024 01:01:16 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
463254e
Sun 12 May 2024 01:02:00 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
df7ae95
Sun 12 May 2024 01:03:47 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
2a3bed2
Sun 12 May 2024 01:04:27 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
92dacfb
Sun 12 May 2024 01:06:47 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  25|1
total_score: 60/70
215759c
Sun 12 May 2024 01:13:33 AM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:190:19: error: ‘TreeMap’ has no member named ‘lower_tan’; did you mean ‘lower_than’?
  190 |         if (tree->lower_tan(aux->pair, key))
      |                   ^~~~~~~~~
      |                   lower_than
treemap.c:186:15: error: variable ‘ub’ set but not used [-Werror=unused-but-set-variable]
  186 |     TreeNode *ub = tree->root;
      |               ^~
cc1: all warnings being treated as errors
Compilation failed
82eff78
Sun 12 May 2024 01:13:51 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:186:15: error: variable ‘ub’ set but not used [-Werror=unused-but-set-variable]
  186 |     TreeNode *ub = tree->root;
      |               ^~
cc1: all warnings being treated as errors
Compilation failed
aab9c1d
Sun 12 May 2024 01:16:09 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  25|1
total_score: 60/70
57d0426
